...
                ),
          ),
        ),
      ),
    if (l10n.reminders.toLowerCase().contains(term))
      ListTile(
        key: const Key('remindersTile'),
        leading: const Icon(Icons.notifications),
        title: Text(l10n.reminders),
        onTap: () => setReminders(!settings.value.reminders, l10n),
        trailing: Switch(
          key: const Key('remindersSwitch'),
          value: settings.value.reminders,
          onChanged: (value) => setReminders(value, l10n),
        ),
      ),
  ];
}
...
